@@ -24,6 +24,7 @@ RMV	MinVer	FirstA	Name
 3.13	3.13	3.13	HX_timespec_add
 3.13	3.13	3.13	HX_timespec_isneg
 3.13	3.13	3.13	HX_timespec_mul
+3.13	3.13	3.13	HX_timespec_mulf
 3.13	3.13	3.13	HX_timespec_neg
 3.13	3.13	3.13	HX_timespec_sub
 3.13	3.13	3.13	HX_timeval_sub
