@@ -14,6 +14,7 @@ Enhancements:
   * time: add the HX_timespec_neg function
   * time: add the HX_timespec_add function
   * time: add the HX_timespec_mul function
+  * time: add the HX_timespec_mulf function
 Changes:
 - io: remove HX_REALPATH_SYMLINK
 - time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
